adapted search input

--- a/advancedsearch.html
+++ b/advancedsearch.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <form action="https://google.com/search">
-            <input type="text" name="q">
+            <span><input type="text" name="as_q">
+            <input type="submit" value="Google Search">all these words</span>
+            <input type="text" name="as_epq">
             <input type="submit" value="Google Search">
         </form>
     </body>
