added search input

--- a/imagesearch.html
+++ b/imagesearch.html
@@ -4,9 +4,9 @@
         <title>Search</title>
     </head>
     <body>
-        <form action="https://google.com/search">
+        <form action="https://www.google.com/search">
             <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input type="hidden" name="tbm" value="isch">
         </form>
     </body>
 </html>
