--- a/imagesearch.html
+++ b/imagesearch.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="links">
+           <a class="linksearch" href="index.html">Google Search</a> 
+        </div>
         <form action="https://www.google.com/search">
             <input type="text" name="q">
             <input type="hidden" name="tbm" value="isch">
