--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <form action="https://google.com/search">
                     <input type="text" name="q">
                     <input type="submit" value="Google Search">
+                    <input type="text" value="I'm feeling lucky">
                 </form>
             </div>
         </div>
