--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="container">
-            <div class="links">
-                <a class="linkimage" href="imagesearch.html">Google Image Search</a>
-                <a class='linkadvanced' href="advancedsearch.html">Google Advanced Search</a>
-            </div>
-            <div class="search">
-                <img  class='front' src="google-2015.svg" alt="">
-                <form action="https://google.com/search">
+        <div class="links">
+            <a class="linkimage" href="imagesearch.html">Google Image Search </a>
+            <a class='linkadvanced' href="advancedsearch.html">Google Advanced Search</a>
+        </div>
+        <div class="search">
+            <img  class='front' src="google-2015.svg" alt="">
+            <form action="https://google.com/search">
+                <div class="search-field">
+                    <svg height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke="#808080" stroke-linecap="round" stroke-linejoin="round"><circle cx="8.5" cy="8.5" r="5" /><path d="m17.571 17.5-5.571-5.5" /></g></svg>
                     <input type="text" name="q">
-                    <input type="submit" value="Google Search">
-                    <input type="text" value="I'm feeling lucky">
-                </form>
-            </div>
+                </div>     
+                <input type="submit" value="Google Search">
+                <input type="submit" value="I'm feeling lucky">
+             </form>
         </div>
     </body>
 </html>
